tests/NormalTests/paczka1/fuzzy1/99106656.err
Error in line 1: CfUWmub3 A390 59,5
Error in line 8: lfqwiSwBv A390 8),)
Error in line 26: rOcEEPSFfd A626 16,21
Error in line 11: lfqwiSwBv A390 51,7
Error in line 18: rOcEEPSFfd S955 42,6
Error in line 34: 694oqf0 S955 10,0
